--- a/res/layout/nearby_layout.xml
+++ b/res/layout/nearby_layout.xml
@@ -13,4 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/section_label"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="61dp"
+        android:text="주변역검색" />
 </RelativeLayout>
