--- a/res/layout/activity_searched_subway.xml
+++ b/res/layout/activity_searched_subway.xml
@@ -19,7 +19,8 @@
         <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:layout_weight="1" >
 
             <Space
                 android:layout_width="match_parent"
@@ -37,13 +38,15 @@
                 android:id="@+id/search_mode"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Button" />
+                android:text="최단시간" />
+
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:layout_weight="10" >
 
             <Button
                 android:id="@+id/station1"
@@ -157,7 +160,8 @@
         <TableRow
             android:id="@+id/tableRow3"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:layout_weight="2" >
 
             <TextView
                 android:id="@+id/menuname_arrival"
@@ -179,7 +183,8 @@
         <TableRow
             android:id="@+id/tableRow4"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:layout_weight="2" >
 
             <TextView
                 android:id="@+id/menuname_departure"
@@ -197,7 +202,8 @@
         <TableRow
             android:id="@+id/tableRow9"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:layout_weight="2" >
 
             <TextView
                 android:id="@+id/time"
